--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     //mustache
     implementation('org.springframework.boot:spring-boot-starter-mustache')
 
+    //oauth
+    implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
+
 //    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
 //    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
