[Update] Spring-Security-Test

--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     //database session repository
     implementation('org.springframework.session:spring-session-jdbc')
 
+    //spring-security-test
+    testImplementation("org.springframework.security:spring-security-test")
+
 //    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
 //    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
